Bug 480392 - Can't add back "Add Widgets" and "Add Panel" to the desktop context menu
Summary: Can't add back "Add Widgets" and "Add Panel" to the desktop context menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-01-27 13:01 UTC by Fushan Wen
Modified: 2024-02-12 10:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 John 2024-01-28 02:13:08 UTC
I wanted to add a bug report about the missing "Add widgets" context item.
Now that I know where it is,  it doesn't seem that bad.
Maybe I can get used to it, but I'm not sure.

But what I'll never get used to it and I consider very annoying is the fact that the items that I very rarely use are displayed there, without the possibility to hide and are displayed first, without the possibility to at least move last:
 "Configure desktop and wallpaper..." and "Configure display settings..."
I don't know why didn't they at least look and made a similar thing to Windows, the kind of usability.
Still wish that "Create new" was first, as it once was.
Comment 2 Nate Graham 2024-01-29 17:13:52 UTC
@fushan Can reproduce. I'll look into it.

@john You can disable those in the config window for the right-click set in the "Mouse Actions" page of the desktop config window.
Comment 3 Bug Janitor Service 2024-02-08 16:17:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3884
Comment 4 Marco Martin 2024-02-12 10:08:05 UTC
Git commit 9d10e0e2a3a4342fe5dd6c10ec13114c08a4e5cc by Marco Martin.
Committed on 12/02/2024 at 10:08.
Pushed by mart into branch 'master'.

Don't remove add widgets/add panel from possible actions

Partly reverts 99f9fea6

That commit wanted to disable by default the actions "add panel" and "add widgets" from the desktop context menu.
Unfortunately, it removed those actions completely making it impossible to add them back from the config dialog.

To be disabled by default actions need to be inserted in the disabled array, but not be removed from m_actionOrder
as that removes it from the list of the existing available actions

M  +3    -1    containmentactions/contextmenu/menu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9d10e0e2a3a4342fe5dd6c10ec13114c08a4e5cc
Comment 5 Marco Martin 2024-02-12 10:09:10 UTC
Git commit 8f1bfa924a0f5aa3eb17c1fdd9dbb5c93c77997f by Marco Martin.
Committed on 12/02/2024 at 10:08.
Pushed by mart into branch 'Plasma/6.0'.

Don't remove add widgets/add panel from possible actions

Partly reverts 99f9fea6

That commit wanted to disable by default the actions "add panel" and "add widgets" from the desktop context menu.
Unfortunately, it removed those actions completely making it impossible to add them back from the config dialog.

To be disabled by default actions need to be inserted in the disabled array, but not be removed from m_actionOrder
as that removes it from the list of the existing available actions

M  +3    -1    containmentactions/contextmenu/menu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8f1bfa924a0f5aa3eb17c1fdd9dbb5c93c77997f